# ore_delegation

./: .gitignore  Anchor.toml  README.md  package.json
programs/ore_delegation/: Cargo.toml
programs/ore_delegation/src/: lib.rs  macros.rs  utils.rs
programs/ore_delegation/src/instructions/: mod.rs  start_epoch.rs
programs/ore_delegation/src/instructions/delegate/: delegate_ore.rs  init_delegate_record.rs  mod.rs  process_delegation.rs  process_undelegation.rs  undelegate_ore.rs
programs/ore_delegation/src/instructions/mining_group/: init_group_accounts.rs  init_mining_group.rs  mod.rs  update_mining_group.rs
programs/ore_delegation/src/instructions/treasury/: init_treasury.rs  mod.rs
programs/ore_delegation/src/state/: delegate_record.rs  epoch_record.rs  mining_group.rs  mod.rs  treasury.rs
